# slidemaker

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  pyproject.toml  test_phase2_integration.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
.serena/memories/: code-style-and-conventions.md  project-overview.md  suggested-commands.md  task-completion-checklist.md
docs/: SECURITY_FIXES.md  getting_started.md  phase1_summary.md  phase2_summary.md  phase3_summary.md  phase4_summary.md  phase5_summary.md  test_summary.md
examples/: config.yaml.example  config_bedrock.yaml.example  sample_presentation.md
frontend/: .env.production  PROJECT_SUMMARY.md  README.md  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/: FileUpload.tsx  ProgressBar.tsx  ResultViewer.test.tsx  ResultViewer.tsx  index.ts
frontend/src/hooks/: index.ts  useFileUpload.ts  useTaskStatus.ts
frontend/src/pages/: ConvertPage.tsx  CreatePage.tsx  HomePage.tsx  index.ts
frontend/src/types/: api.ts  index.ts
issues/: i003.md  i004.md  i005.md  i006.md  i007.md  i01.md  i02.md  python_pptx_api_reference.md
issues/PLAN01/: 00_overview.md  01_architecture.md  02_module_structure.md  03_technology_stack.md  04_development_phases.md  05_deployment.md  06_implementation_roadmap.md  README.md
src/slidemaker/: __init__.py  __version__.py
src/slidemaker/api/: __init__.py  main.py  storage.py  tasks.py
src/slidemaker/api/schemas/: __init__.py  requests.py  responses.py
src/slidemaker/cli/: __init__.py  config.py  main.py  output.py
src/slidemaker/cli/commands/: __init__.py  convert.py  create.py
src/slidemaker/core/models/: __init__.py  common.py  element.py  page_definition.py  slide_config.py
src/slidemaker/core/serializers/: __init__.py  json_serializer.py  markdown.py
src/slidemaker/image_processing/: __init__.py  analyzer.py  exceptions.py  loader.py  processor.py
src/slidemaker/llm/: base.py  manager.py
src/slidemaker/llm/adapters/api/: __init__.py  base_api.py  bedrock_claude.py  claude.py  gemini.py  gpt.py
src/slidemaker/llm/adapters/cli/: __init__.py  base_cli.py  claude_code.py  codex_cli.py  gemini_cli.py
src/slidemaker/llm/prompts/: __init__.py  composition.py  image_generation.py  image_processing.py
src/slidemaker/pptx/: __init__.py  generator.py  slide_builder.py  style_applier.py
src/slidemaker/pptx/renderers/: __init__.py  image_renderer.py  text_renderer.py
src/slidemaker/utils/: __init__.py  config_loader.py  file_manager.py  logger.py
src/slidemaker/workflows/: __init__.py  base.py  composition_parser.py  conversion.py  exceptions.py  image_coordinator.py  new_slide.py
tests/: test_version.py
tests/cli/: test_cli_e2e.py  test_config.py  test_convert.py  test_create.py  test_main.py  test_output.py
tests/image_processing/: __init__.py  test_analyzer.py  test_loader.py  test_processor.py
tests/llm/adapters/cli/: test_codex_cli.py
tests/pptx/: __init__.py  test_generator.py  test_renderers.py  test_slide_builder.py  test_style_applier.py
tests/pptx/integration/: __init__.py  test_full_generation.py
tests/unit/: test_config_loader.py  test_file_manager.py  test_gpt_adapter.py  test_llm_manager.py  test_models.py  test_serializers.py
tests/unit/llm/adapters/cli/: test_claude_code.py
tests/workflows/: test_base.py  test_composition_parser.py  test_conversion.py  test_exceptions.py  test_image_coordinator.py  test_new_slide.py
